# translator-py

./: .gitignore  Dockerfile  README.md  env_setup.py  main.py  pack.py  pyproject.toml  requirements.txt
ai/: chat_robot.py
common/: exceptions.py  logger.py  security.py
data/: database.py
data/models/: history.py  user.py
routers/auth/: index.py  models.py
routers/chat/: index.py  models.py
tasks/: backup.py
