[project]
name = "translator-py"
version = "0.1.0"
description = ""
authors = [
    {name = "zhaosz",email = "iloveyesterday@outlook.com"}
]
readme = "README.md"
requires-python = "3.11.15"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "sqlmodel (>=0.0.37,<0.0.38)",
    "pymysql (>=1.1.2,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "apscheduler (>=3.11.2,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "langchain-openai (>=1.1.12,<2.0.0)",
    "boto3 (>=1.42.83,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
